--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title></title>
-</head>
-<body>
+---
+layout: site
+body_class: home
+leadingpath: ./
+---
+
 <center>
 <h1>Vídeo de Hoje</h1>
 <hr>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Xykjhgch2XU" frameborder="0" allowfullscreen></iframe>
 </center>
-</body>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-78298502-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-</html>
