--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@ body_class: home
 leadingpath: ./
 ---
 
+<div class="container">
+
 <center>
 <h1>Vídeo de Hoje</h1>
 <hr>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Xykjhgch2XU" frameborder="0" allowfullscreen></iframe>
 </center>
+
+</div>
