--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@ leadingpath: ./
 ---
 
 <div class="container">
-
-<center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Xykjhgch2XU" frameborder="0" allowfullscreen></iframe>
-</center>
-
+  <!-- 16:9 aspect ratio -->
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Xykjhgch2XU" allowfullscreen></iframe>
+  </div>
 </div>
