--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ leadingpath: ./
 <div class="container">
   <!-- 16:9 aspect ratio -->
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Xykjhgch2XU" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Xykjhgch2XU" allowfullscreen></iframe>
   </div>
 </div>
