--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ leadingpath: ./
 
 <div class="container">
 
-  <h1>Videos de hoje</h1>
+  <h3 style="font-family:'Helvetica Neu'">Videos de hoje</h3>
   <div class="row">
     <div class="col-md-4">
         <!-- 16:9 aspect ratio -->
