--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ leadingpath: ./
 
   <h3 style="font-family:'Helvetica Neu'">Videos de hoje</h3>
   <div class="row">
+    <center>
     <div class="col-md-4">
         <!-- 16:9 aspect ratio -->
         <div class="embed-responsive embed-responsive-16by9">
@@ -16,14 +17,14 @@ leadingpath: ./
     </div>
     <div class="col-md-4">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Xykjhgch2XU" allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/buMp9yg-7YU" allowfullscreen></iframe>
         </div>
     </div>
     <div class="col-md-4">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Xykjhgch2XU" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QGLnIyop0P4" allowfullscreen></iframe>
       </div>
     </div>
-
+  </center>
     </div>
 </div>
