--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ leadingpath: ./
     <div class="col-md-4">
         <!-- 16:9 aspect ratio -->
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=a-Y-aowopwE" allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/a-Y-aowopwE" allowfullscreen></iframe>
 
         </div>
     </div>
